Image alignment fix

--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,15 @@
 ---
 ---
 
+.image-wrapper {
+    text-align: center;
+
+    .image-caption {
+        color: $grey-color;
+        margin-top: $spacing-unit / 3;
+    }
+}
+
 //
 // IMPORTS
 //
